--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,11 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "post-install-cmd": [
+        "php artisan clear-compiled",
+        "chmod -R 755 storage",
+        "php artisan config:cache"
         ]
     },
     "extra": {
